--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,18 @@
 #AWS
-aws.access.key.id=AKIAYWC3MGIS6VY634CV
-aws.secret.access.key=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
+aws.access.key.id=[ACCESS_KEY]
+aws.secret.access.key=[SECRET_KEY]
 aws.s3.region=ap-south-1
 aws.s3.bucket.name=docbucket21
 
 #database configuration:mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/docs?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.url=jdbc:mysql://localhost/docbucket21?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=M@nav210401
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=[YOUR_PASSWORD]
 
 #hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-#spring-mvc
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
-#MaxSize
-#spring.servlet.multipart.max-file-size=20MB
-#spring.servlet.multipart.max-request-size=20MB
 
 
 
